prototyping skiils section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./styles/intro.css" />
     <link rel="stylesheet" href="./styles/contact.css" />
     <link rel="stylesheet" href="./styles/about.css" />
+    <link rel="stylesheet" href="./styles/skills.css" />
   </head>
   <body>
     <section id="navbar">
@@ -50,13 +51,42 @@
       <hr />
       <div class="subsect" id="projects">projects</div>
       <hr />
-      <div class="subsect" id="skills">skills</div>
+      <div class="subsect" id="skills">
+        <div id="skills-header">skills</div>
+        <div class="skills-content">
+          <ul>
+            Languages:
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>Java</li>
+          </ul>
+          <ul>
+            Frameworks and Technologies:
+            <li>React.js</li>
+            <li>Express.js</li>
+            <li>Node.js</li>
+            <li></li>
+          </ul>
+          <ul>
+            Databases:
+            <li>MySQL</li>
+            <li>Firebase</li>
+            <li>MongoDB</li>
+          </ul>
+        </div>
+      </div>
       <hr />
       <div class="subsect" id="contact">
         <div id="contact-header">Contact</div>
         <div class="contact-links">
           <a id="contact-1">email</a>
-          <a id="contact-1" target="_blank" href="https://www.linkedin.com/in/brandon-chan185/">LinkedIn</a>
+          <a
+            id="contact-1"
+            target="_blank"
+            href="https://www.linkedin.com/in/brandon-chan185/"
+            >LinkedIn</a
+          >
           <a id="contact-1">Github</a>
         </div>
       </div>
