--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./styles/styles.css" />
-    <link rel="stylesheet" href="./styles/intro.css" />
-    <link rel="stylesheet" href="./styles/contact.css" />
-    <link rel="stylesheet" href="./styles/about.css" />
-    <link rel="stylesheet" href="./styles/skills.css" />
-    <link rel="stylesheet" href="./styles/projects.css" />
+    <link rel="stylesheet" href="./styles/app.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,38 +14,70 @@
     />
   </head>
   <body>
+    
     <section id="navbar">
-      <ul id="nav-list">
-        <li id="logo">logo</li>
-        <!-- <li id="nav-main-title">Brandon Chan</li> -->
-        <li id="nav-item1"><a href="#introduction">Home</a></li>
-        <li id="nav-item2"><a href="#about-me">About Me</a></li>
-        <li id="nav-item3"><a href="#projects">Projects</a></li>
-        <li id="nav-item4"><a href="#contact">Contact</a></li>
+      <ul class="nav-list">
+        <li id="logo">
+          <a href="#introduction">BC</a>
+        </li>
+        <li id="nav-item1" style="grid-area: navItem1; grid-column: 8/9">
+          <a href="#introduction">Home</a>
+        </li>
+        <li id="nav-item2" style="grid-area: navItem2; grid-column: 9/10">
+          <a href="#about-me">About Me</a>
+        </li>
+        <li id="nav-item3" style="grid-area: navItem3; grid-column: 10/11">
+          <a href="#projects">Projects</a>
+        </li>
+        <li id="nav-item4" style="grid-area: navItem4; grid-column: 11/12">
+          <a href="#contact">Contact</a>
+        </li>
+        <li class="burger" style="grid-column: 11/12">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </li>
+      </ul>
+      <ul class="nav-list-mobile">
+        <li id="nav-mobile-item1" style="grid-area: navItem1; grid-column: 8/9">
+          <a href="#introduction">Home</a>
+        </li>
+        <li id="nav-mobile-item2" style="grid-area: navItem2; grid-column: 9/10">
+          <a href="#about-me">About Me</a>
+        </li>
+        <li id="nav-mobile-item3" style="grid-area: navItem3; grid-column: 10/11">
+          <a href="#projects">Projects</a>
+        </li>
+        <li id="nav-mobile-item4" style="grid-area: navItem4; grid-column: 11/12">
+          <a href="#contact">Contact</a>
+        </li>
       </ul>
     </section>
 
     <section id="main-sect">
       <div class="subsect" id="introduction">
-        <!-- <div class="intro-img">
-          <img id="avatar" src="images/2.jpg">
-        </div> -->
-        <img id="avatar" src="images/2.jpg" />
         <div class="text-intro">
-          <p id="#intro-1">Hi, my name is</p>
-          <p id="#intro-2">Brandon Chan.</p>
-          <p id="#intro-3">
+          <p id="#intro-1" class="default-font">Hi, my name is</p>
+          <p
+            id="#intro-2"
+            class="enlarged-font"
+            style="margin-top: 5px; margin-bottom: 5px"
+          >
+            Brandon Chan.
+          </p>
+          <p id="#intro-3" class="default-font">
             I'm a software engineer with a focus on web development. Here is
             where I share my current skillsets, accomplishments and my passion
             for technology!
           </p>
         </div>
+        <img id="avatar" src="images/2.jpg" />
       </div>
       <hr />
       <div class="subsect" id="about-me">
         <div class="about-header">About me</div>
         <div id="about-text">
-          <p>
+          <p class="default-font">
             I am a recent graduate from york univeristy with a bachelor's degree
             in Computer engineering. Primarily I have a focus on software
             development but I also have a passion for learning about hardware
@@ -59,84 +86,6 @@
           </p>
         </div>
       </div>
-      <hr />
-      <div class="subsect" id="projects">
-        <p style="text-align: center; margin-bottom:30px;">Projects</p>
-        <ul id="project-container">
-          <li class="project-element">
-            
-            <img
-              class="project-image"
-              src="https://cdn.pixabay.com/photo/2021/01/24/21/52/grand-canyon-5946657_960_720.jpg"
-            />
-            <div class="project-content" >
-              <div class="project-title">Title</div>
-              <p class="project-description" >
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Suscipit quaerat quas eveniet soluta expedita inventore
-                recusandae et, deleniti at ea ut repellendus itaque molestias
-                commodi fugit! Distinctio reprehenderit impedit nihil.
-              </p>
-              <ul class="project-technologies">
-                <li class="project-tech-link">"frontend"</li>
-                <li class="project-tech-link">"Backend"</li>
-                <li class="project-tech-link">"Database"</li>
-              </ul>
-              <ul class="project-links">
-                <li class="project-link contact-1">Github</li>
-                <li class="project-link contact-1">Youtube</li>
-              </ul>
-            </div>
-          </li>
-          <li class="project-element-reverse">
-            <img
-              class="project-image"
-              src="https://cdn.pixabay.com/photo/2021/01/24/21/52/grand-canyon-5946657_960_720.jpg"
-            />
-            <div class="project-content" style="margin-left:30px;">
-              <p class="project-description" >
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Suscipit quaerat quas eveniet soluta expedita inventore
-                recusandae et, deleniti at ea ut repellendus itaque molestias
-                commodi fugit! Distinctio reprehenderit impedit nihil.
-              </p>
-              <ul class="project-technologies">
-                <li class="project-tech-link">"frontend"</li>
-                <li class="project-tech-link">"Backend"</li>
-                <li class="project-tech-link">"Database"</li>
-              </ul>
-              <ul class="project-links">
-                <li class="project-link contact-1">Github</li>
-                <li class="project-link contact-1">Youtube</li>
-              </ul>
-            </div>
-          </li>
-          <li class="project-element">
-            <img
-              class="project-image"
-              src="https://cdn.pixabay.com/photo/2021/01/24/21/52/grand-canyon-5946657_960_720.jpg"
-            />
-            <div class="project-content" style="margin-left:30px;">
-              <p class="project-description" >
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Suscipit quaerat quas eveniet soluta expedita inventore
-                recusandae et, deleniti at ea ut repellendus itaque molestias
-                commodi fugit! Distinctio reprehenderit impedit nihil.
-              </p>
-              <ul class="project-technologies">
-                <li class="project-tech-link">"frontend"</li>
-                <li class="project-tech-link">"Backend"</li>
-                <li class="project-tech-link">"Database"</li>
-              </ul>
-              <ul class="project-links">
-                <li class="project-link contact-1">Github</li>
-                <li class="project-link contact-1">Youtube</li>
-              </ul>
-            </div>
-          </li>
-        </ul>
-      </div>
-      <hr />
       <div class="subsect" id="skills">
         <div id="skills-header">skills</div>
         <div class="skills-content">
@@ -163,22 +112,95 @@
         </div>
       </div>
       <hr />
+
+      <div class="subsect" id="projects">
+        <p style="text-align: center; margin-bottom: 30px">Projects</p>
+        <ul id="project-container">
+          <li class="project-element">
+            <img class="project-image" src="./images/p1/2.png" />
+            <div class="project-content">
+              <div class="project-title">MedMemo</div>
+              <p class="project-description default-font">
+                A web based communication application geared towards healthcare
+                professionals in the hospital environment. The main goal was to
+                create a lighweight web application that was easily accessable
+                to health care workers that provided information about a
+                patient's condition. This would thereby remove the need for
+                physical terminal stations for handling important patient data
+                and improve the effeciency of data in general.
+              </p>
+              <ul class="project-technologies">
+                <li class="project-tech-link default-font">React.js</li>
+                <li class="project-tech-link default-font">Express.js</li>
+                <li class="project-tech-link default-font">Passport.js</li>
+                <li class="project-tech-link default-font">MySQL</li>
+                <li class="project-tech-link default-font">Firebase</li>
+              </ul>
+              <ul class="project-links">
+                <li>
+                  <a
+                    class="project-link contact-1 default-font"
+                    target="_blank"
+                    href="https://github.com/marksavin/eng4000"
+                    >Github</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="project-link contact-1 default-font"
+                    href="https://youtu.be/6hc6acOSLHY"
+                    target="_blank"
+                    >Youtube</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li class="project-element-reverse">
+            <img
+              class="project-image"
+              src="https://cdn.pixabay.com/photo/2021/01/24/21/52/grand-canyon-5946657_960_720.jpg"
+            />
+            <div class="project-content" style="margin-left: 30px">
+              <div class="project-title">Chat Application</div>
+              <p class="project-description default-font">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Suscipit quaerat quas eveniet soluta expedita inventore
+                recusandae et, deleniti at ea ut repellendus itaque molestias
+                commodi fugit! Distinctio reprehenderit impedit nihil.
+              </p>
+              <ul class="project-technologies">
+                <li class="project-tech-link default-font">React.js</li>
+                <li class="project-tech-link default-font">Firebase</li>
+              </ul>
+              <ul class="project-links">
+                <li>
+                  <a class="project-link contact-1 default-font">Github</a>
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
       <div class="subsect" id="contact">
         <div id="contact-header">Contact</div>
         <div class="contact-links">
-          <a class="contact-1">email</a>
+          <a class="contact-1" href="mailto: brandonchan.bnc@gmail.com">email</a>
           <a
             class="contact-1"
             target="_blank"
             href="https://www.linkedin.com/in/brandon-chan185/"
             >LinkedIn</a
           >
-          <a class="contact-1" target="_blank" href="https://github.com/brandon197"
+          <a
+            class="contact-1"
+            target="_blank"
+            href="https://github.com/brandon197"
             >Github</a
           >
         </div>
       </div>
-      <hr />
     </section>
+    <script src="index.js"></script>
   </body>
 </html>
