--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li id="nav-item4" style="grid-area: navItem4; grid-column: 11/12">
           <a href="#contact">Contact</a>
         </li>
-        <li class="burger" style="grid-column: 11/12">
+        <li class="burger">
           <div class="line1"></div>
           <div class="line2"></div>
           <div class="line3"></div>
