--- a/index.html
+++ b/index.html
@@ -88,26 +88,26 @@
       </div>
       <div class="subsect" id="skills">
         <div id="skills-header">skills</div>
-        <div class="skills-content">
-          <ul>
+        <div class="skills-content default-font">
+          <ul class="default-font">
             Languages:
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>Java</li>
+            <li class="default-font">HTML</li>
+            <li class="default-font">CSS</li>
+            <li class="default-font">JavaScript</li>
+            <li class="default-font">Java</li>
           </ul>
-          <ul>
+          <ul class="default-font">
             Frameworks and Technologies:
-            <li>React.js</li>
-            <li>Express.js</li>
-            <li>Node.js</li>
-            <li></li>
+            <li class="default-font">React.js</li>
+            <li class="default-font">Express.js</li>
+            <li class="default-font">Node.js</li>
+            <li class="default-font"></li>
           </ul>
-          <ul>
+          <ul class="default-font">
             Databases:
-            <li>MySQL</li>
-            <li>Firebase</li>
-            <li>MongoDB</li>
+            <li class="default-font">MySQL</li>
+            <li class="default-font">Firebase</li>
+            <li class="default-font">MongoDB</li>
           </ul>
         </div>
       </div>
