fix responsiveness in about and skills

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </div>
       <hr />
       <div class="subsect" id="about-me">
-        <div class="about-header">About me</div>
+        <div class="about-header header-font">About me</div>
         <div id="about-text">
           <p class="default-font">
             I am a recent graduate from york univeristy with a bachelor's degree
@@ -92,7 +92,7 @@
         </div>
       </div>
       <div class="subsect" id="skills">
-        <div id="skills-header">What I've Worked With:</div>
+        <div id="skills-header" class="header-font">What I've Worked With:</div>
         <div class="skills-content default-font">
           <ul class="default-font skill-list">
             
@@ -113,12 +113,12 @@
       <hr />
 
       <div class="subsect" id="projects">
-        <p style="text-align: center; margin-bottom: 30px">Projects</p>
+        <p class="header-font" style="text-align: center; margin-bottom: 30px">Projects</p>
         <ul id="project-container">
           <li class="project-element">
             <img class="project-image" src="./images/p1/2.png" />
             <div class="project-content">
-              <div class="project-title">MedMemo</div>
+              <div class="project-title header-font">MedMemo</div>
               <p class="project-description default-font">
                 A web based communication application geared towards healthcare
                 professionals in the hospital environment. The main goal was to
@@ -160,7 +160,7 @@
           <li class="project-element-reverse">
             <img class="project-image" src="./images/p2/2.png" />
             <div class="project-content" style="margin-left: 30px">
-              <div class="project-title">Chat Application</div>
+              <div class="project-title header-font">Chat Application</div>
               <p class="project-description default-font">
                 A web based chat application that allows users to create their
                 own chat rooms and send text based messages to communicate. The
@@ -192,7 +192,7 @@
         </ul>
       </div>
       <div class="subsect" id="contact">
-        <div id="contact-header">Contact</div>
+        <div class="header-font" id="contact-header">Contact</div>
         <div class="contact-links">
           <a class="contact-1" href="mailto: brandonchan.bnc@gmail.com">
             <img class="contact-icons" src="images/icons/contact/email.svg" />
