--- a/index.html
+++ b/index.html
@@ -103,14 +103,18 @@
             <li class="default-font"><img class="skill-icons"src="./images/icons/skills/react.svg"></li>
             <li class="default-font">Express.js</li>
             <li class="default-font"><img class="skill-icons"src="./images/icons/skills/node.svg"></li>
-            <li class="default-font"><img class="skill-icons"src="./images/icons/skills/sql.svg"></li>
+            <li class="default-font"><img class="skill-icons"src="./images/icons/skills/SQL.svg"></li>
             <li class="default-font"><img class="skill-icons"src="./images/icons/skills/firebase.svg"></li>
             <li class="default-font"><img class="skill-icons"src="./images/icons/skills/mongo.svg"></li>
           </ul>
          
         </div>
       </div>
-      <hr />
+
+      <div class="subsect" id="resume">
+        <div class="header-font" id="resume-header">Need a Resume?</div>
+        <a class="default-font" id="resume-button" href="./docs/Brandon Chan Resume.pdf" target="_blank">Grab a copy</a>
+      </div>
 
       <div class="subsect" id="projects">
         <p class="header-font" style="text-align: center; margin-bottom: 30px">Projects</p>
