fixed project link centering

--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
                 and improve the effeciency of data in general.
               </p>
               <ul class="project-technologies">
-                <li class="project-tech-link default-font">React.js</li>
-                <li class="project-tech-link default-font">Express.js</li>
-                <li class="project-tech-link default-font">Passport.js</li>
-                <li class="project-tech-link default-font">MySQL</li>
-                <li class="project-tech-link default-font">Firebase</li>
+                <li class="project-tech-link ">React.js</li>
+                <li class="project-tech-link ">Express.js</li>
+                <li class="project-tech-link ">Passport.js</li>
+                <li class="project-tech-link ">MySQL</li>
+                <li class="project-tech-link ">Firebase</li>
               </ul>
               <ul class="project-links">
-                <li>
+                <li style="width:50px">
                   <a
                     class="project-link contact-1 default-font"
                     target="_blank"
@@ -150,7 +150,7 @@
                       src="./images/icons/contact/github-svgrepo-com.svg"
                   /></a>
                 </li>
-                <li>
+                <li style="width:50px">
                   <a
                     class="project-link contact-1 default-font"
                     href="https://youtu.be/6hc6acOSLHY"
@@ -176,11 +176,11 @@
                 with multiple entries in a database.
               </p>
               <ul class="project-technologies">
-                <li class="project-tech-link default-font">React.js</li>
-                <li class="project-tech-link default-font">Firebase</li>
+                <li class="project-tech-link ">React.js</li>
+                <li class="project-tech-link ">Firebase</li>
               </ul>
               <ul class="project-links">
-                <li>
+                <li style="width:50px">
                   <a
                     class="project-link contact-1 default-font"
                     target="_blank"
