--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       </div>
 
       <div class="subsect" id="projects">
-        <p class="header-font" style="text-align: center; margin-bottom: 30px">
+        <p class="header-font" id="project-sect-title" >
           Projects
         </p>
         <ul id="project-container">
