small margin adjustment

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </div>
       <hr />
       <div class="subsect" id="about-me">
-        <div class="about-header header-font">About me</div>
+        <div class="header-font" id="about-header">About me</div>
         <div id="about-text">
           <p class="default-font">
             I am a recent graduate from york univeristy with a bachelor's degree
