added vlsi project and fixed tittle

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Brandon Chan</title>
     <link rel="stylesheet" href="./styles/app.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,7 +12,6 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <title>Brandon Chan</title>
   </head>
   <body>
     <section id="navbar">
@@ -61,7 +60,6 @@
           <a href="#contact">Contact</a>
         </li>
       </ul>
-      
     </section>
     <div class="progress-container">
       <div class="progress-bar" id="myBar"></div>
@@ -85,7 +83,7 @@
         <div class="header-font" id="about-header">About me</div>
         <div id="about-text">
           <p class="default-font">
-            I am a recent graduate from york univeristy with a bachelor's degree
+            I am a recent graduate from York Univeristy with a bachelor's degree
             in Computer engineering. Primarily I have a focus on software
             development building various web based applications with hands on
             experience in full stack. Despite this focus in my career, I have a
@@ -150,9 +148,7 @@
       </div>
 
       <div class="subsect" id="projects">
-        <p class="header-font" id="project-sect-title" >
-          Projects
-        </p>
+        <p class="header-font" id="project-sect-title">Projects</p>
         <ul id="project-container">
           <li class="project-element">
             <img class="project-image" src="./images/p1/2.png" />
@@ -230,6 +226,44 @@
               </ul>
             </div>
           </li>
+          <li class="project-element">
+            <img class="project-image" src="./images/p3/LRU.png" />
+            <div class="project-content">
+              <div class="project-title header-font">
+                LRU Integrated Circuit
+              </div>
+              <p class="project-description default-font">
+                A VLSI design that outlines an Application Specific Integrated
+                Circuit (ASIC) that replicates the nature of the
+                Least-Recently-Used algorithm for a 4-way set-associative cache
+                that has a total of 8 sets within a 600nM process. This includes
+                creating verilog simulations, schematics and layouts. In doing
+                so it will keep track of how often each way in each set is
+                accessed by using a 2-bit counter where the value 11 represents
+                the most recently accessed and 00 represents the least recently
+                accessed.
+              </p>
+              <ul class="project-technologies">
+                <li class="project-tech-link">SystemVerilog</li>
+                <li class="project-tech-link">Verilog</li>
+                <li class="project-tech-link">Cadence Virtuoso</li>
+                <li class="project-tech-link">Innovus</li>
+                <li class="project-tech-link">Design Compiler</li>
+              </ul>
+              <ul class="project-links">
+                <li style="width: 50px">
+                  <a
+                    class="project-link contact-1 default-font"
+                    target="_blank"
+                    href="https://github.com/brandon197/LRU_Intigrated-Circuit"
+                    ><img
+                      class="project-icons"
+                      src="./images/icons/contact/github-svgrepo-com.svg"
+                  /></a>
+                </li>
+              </ul>
+            </div>
+          </li>
         </ul>
       </div>
       <div class="subsect" id="contact">
@@ -237,7 +271,7 @@
         <div class="contact-links">
           <a class="contact-1" href="mailto: brandonchan.bnc@gmail.com">
             <svg
-            class="contact-icons"
+              class="contact-icons"
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 24 24"
               fill="#000000"
