updated profile pic

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <section id="main-sect">
       <div class="subsect" id="introduction">
-        <div class="text-intro">
+        <div class="text-intro" >
           <p id="#intro-1" class="default-font">Hi, my name is</p>
           <p id="#intro-2" class="enlarged-font typing"></p>
           <p id="#intro-3" class="default-font">
@@ -76,7 +76,9 @@
             for technology!
           </p>
         </div>
-        <img id="avatar" src="images/2.jpg" />
+        <div></div>
+        <img id="ava1" class="avatar"   src="images/3.jpg" />
+        <!-- <div id="ava2" class="avatar"></div> -->
       </div>
       <hr />
       <div class="subsect" id="about-me">
@@ -137,13 +139,13 @@
       </div>
 
       <div class="subsect" id="resume">
-        <div class="header-font" id="resume-header">Need a Resume?</div>
+        <div class="header-font" id="resume-header"></div>
         <a
           class="default-font"
           id="resume-button"
           href="./docs/Brandon Chan Resume.pdf"
           target="_blank"
-          >Grab a copy</a
+          >  Check Out My Resume </a
         >
       </div>
 
@@ -267,7 +269,7 @@
         </ul>
       </div>
       <div class="subsect" id="contact">
-        <div class="header-font" id="contact-header">Contact</div>
+        <div class="header-font" id="contact-header"></div>
         <div class="contact-links">
           <a class="contact-1" href="mailto: brandonchan.bnc@gmail.com">
             <svg
@@ -333,6 +335,10 @@
             </svg>
           </a>
         </div>
+        <p id="outro">
+          <i class="fa"></i>
+          Brandon Chan 2021
+        </p>
       </div>
     </section>
     <script src="index.js"></script>
