update styles and add skill icons

--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
         <img id="ava1" class="avatar"   src="images/5.jpg" />
         <!-- <div id="ava2" class="avatar"></div> -->
       </div>
-      <hr />
       <div class="subsect" id="about-me">
         <div class="header-font" id="about-header">About me</div>
         <div id="about-text">
@@ -124,6 +123,21 @@
             </li>
             <li class="default-font">
               <img class="skill-icons" src="./images/icons/skills/SQL.svg" />
+            </li>
+            <li class="default-font">
+              <img class="skill-icons" src="./images/icons/skills/python.svg" />
+            </li>
+            <li class="default-font">
+              <img class="skill-icons" src="./images/icons/skills/vue.svg" />
+            </li>
+            <li class="default-font">
+              <img class="skill-icons" src="./images/icons/skills/postgresql.svg" />
+            </li>
+            <li class="default-font">
+              <img class="skill-icons" src="./images/icons/skills/c-sharpsvg.svg" />
+            </li>
+            <li class="default-font">
+              <img class="skill-icons" src="./images/icons/skills/aws.svg" />
             </li>
             <li class="default-font">
               <img
@@ -177,7 +191,7 @@
                   <a
                     class="project-link contact-1 default-font"
                     target="_blank"
-                    href="https://github.com/marksavin/eng4000"
+                    href="https://github.com/brandon197/MedMemo"
                     ><img
                       class="project-icons"
                       src="./images/icons/contact/github-svgrepo-com.svg"
